log
Thu 14 Mar 2024 09:09:01 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:29: error: lvalue required as increment operand
   46 |   for(int i = 0 ; i < 10 ; 1++)
      |                             ^~
Compilation failed
a35de4a
Thu 14 Mar 2024 09:09:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a5369d3
Thu 14 Mar 2024 09:10:06 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
0386ec6
Thu 14 Mar 2024 09:13:48 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |         suma += dato;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
02f9b9d
Thu 14 Mar 2024 09:15:10 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |         suma += dato;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
d074506
Thu 14 Mar 2024 09:15:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |         suma = suma + dato;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
7bf3f70
Thu 14 Mar 2024 09:15:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:13: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |        suma += dato;
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
6611e94
Thu 14 Mar 2024 09:22:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
5aed836
Wed 20 Mar 2024 01:59:27 AM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: implicit declaration of function ‘pupCurrent’; did you mean ‘popCurrent’? [-Werror=implicit-function-declaration]
   88 |         pupCurrent(L);
      |         ^~~~~~~~~~
      |         popCurrent
cc1: all warnings being treated as errors
Compilation failed
987e0a9
